feat: add docs for category related routes
